# embassy-task-order

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  stts22h.rs  usb_interface.rs
